# APPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tang/com/myplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/ap/player/: APlayer.java  APlayerApp.java  LiveAdapter.java  MainActivity.java  PermissionUtil.java  PlayActivity.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/test/java/tang/com/myplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
live/: .gitignore  build.gradle
live/src/main/: AndroidManifest.xml
live/src/main/java/com/ap/live/: LiveManager.java  LiveService.java  UnauthorisedInterceptor.java
live/src/main/java/com/ap/live/list/: Data.java  Items.java  LiveList.java  Pictures.java
live/src/main/java/com/ap/live/room/: CustomGsonConverterFactory.java  CustomGsonRequestBodyConverter.java  CustomGsonResponseBodyConverter.java  Data.java  Info.java  Room.java  Videoinfo.java
